# windows-up

./: .gitignore  CMakeLists.txt  README.md  license
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml
docs/: architecture.md
src/: CMakeLists.txt  main.cpp
src/modules/cleaner/: CMakeLists.txt
src/modules/cleaner/include/miransas/cleaner/: cleaner_feature.hpp
src/modules/cleaner/src/: cleaner_feature.cpp
src/modules/core/: CMakeLists.txt
src/modules/core/include/miransas/core/: feature.hpp  feature_manager.hpp  result.hpp  windows_privilege.hpp
src/modules/core/src/: feature_manager.cpp  windows_privilege.cpp
src/modules/diagnostics/: CMakeLists.txt
src/modules/diagnostics/include/miransas/diagnostics/: diagnostics_feature.hpp
src/modules/diagnostics/src/: diagnostics_feature.cpp
src/modules/filesystem/: CMakeLists.txt
src/modules/filesystem/include/miransas/filesystem/: filesystem_feature.hpp
src/modules/filesystem/src/: filesystem_feature.cpp
src/modules/logger/: CMakeLists.txt
src/modules/logger/include/miransas/logger/: logger.hpp
src/modules/logger/src/: logger.cpp
src/modules/performance/: CMakeLists.txt
src/modules/performance/include/miransas/performance/: performance_feature.hpp
src/modules/performance/src/: performance_feature.cpp
src/modules/privacy/: CMakeLists.txt
src/modules/privacy/include/miransas/privacy/: privacy_feature.hpp
src/modules/privacy/src/: privacy_feature.cpp
src/modules/processes/: CMakeLists.txt
src/modules/processes/include/miransas/processes/: processes_feature.hpp
src/modules/processes/src/: processes_feature.cpp
src/modules/registry/: CMakeLists.txt
src/modules/registry/include/miransas/registry/: registry_manager.hpp  registry_service.hpp
src/modules/registry/src/: registry_manager.cpp  registry_service.cpp
src/modules/restore/: CMakeLists.txt
src/modules/restore/include/miransas/restore/: restore_feature.hpp
src/modules/restore/src/: restore_feature.cpp
src/modules/scheduled_tasks/: CMakeLists.txt
src/modules/scheduled_tasks/include/miransas/scheduled_tasks/: scheduled_task_manager.hpp
src/modules/scheduled_tasks/src/: scheduled_task_manager.cpp
src/modules/security/: CMakeLists.txt
src/modules/security/include/miransas/security/: security_feature.hpp
src/modules/security/src/: security_feature.cpp
src/modules/services/: CMakeLists.txt
src/modules/services/include/miransas/services/: service_manager.hpp
src/modules/services/src/: service_manager.cpp
src/ui/: CMakeLists.txt
src/ui/include/miransas/ui/: imgui_layer.hpp  localization.hpp
src/ui/src/: imgui_layer.cpp  localization.cpp
tests/: CMakeLists.txt  feature_tests.cpp  registry_tests.cpp
